--- a/templates/package.html
+++ b/templates/package.html
@@ -20,7 +20,7 @@
             <div class="bg-white shadow-lg rounded-lg overflow-hidden transform transition duration-500 hover:scale-105 hover:shadow-2xl">
                 <div class="p-6">
                     <h3 class="text-lg leading-6 font-medium text-black">{{ package.name }}</h3>
-                    <p class="mt-4 text-sm text-gray-800">{{ package.description }}</p>
+                    <p class="mt-4 text-sm text-gray-800">{{ package.description |linebreaksbr}}</p>
                     <div class="mt-6">
                         <span class="text-4xl font-extrabold text-black">BDT {{ package.price }}</span>
                         <span class="text-base font-medium text-gray-200 text-pink-500">/ {{ package.duration_days }} days</span>
